--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Home</title>
+    <title>Davidson T | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
     <meta name="application-name" content="John Doe | Home" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Home" />
+    <meta name="apple-mobile-web-app-title" content="Davidson T | Home" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
