--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon kaggle" href="" target="_blank" rel="author">
+                        <a class="socialicon kaggle" href="https://www.kaggle.com/davidsonterane" target="_blank" rel="author">
                             <i class="fab fa-kaggle"></i>
                         </a>
 
-                        <a class="socialicon instagram" href="" target="_blank" rel="author">
+                        <a class="socialicon instagram" href="https://www.instagram.com/teranedavidson?igsh=dDhxcXNub3BhMXFm" target="_blank" rel="author">
                             <!-- svg code for instagram icon -->
                             <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
                                 <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
@@ -178,7 +178,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon github" href="" target="_blank" rel="author">
+                        <a class="socialicon github" href="https://github.com/Dterane" target="_blank" rel="author">
                             <!-- SVG code for Github icon -->
                             <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                                 <!-- body -->
