--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" light-mode="dark">
+<html lang="en" light-mode="dark"> 
 
 <head>
-    <title>Davidson TERANE | Home</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
-    <meta name="description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
-    <!-- Robot.txt -->
-    <meta name="robots" content="index,follow" />
-    <meta name="Googlebot" content="index,follow" />
-    <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="https://davidsonterane.com/">
-    <meta property="og:title" content="Davidson TERAME | Home">
-    <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://davidsonterane.com/">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://davidsonterane.com/">
-    <meta name="application-name" content="Davidson TERANE | Home" />
-    <meta name="apple-mobile-web-app-title" content="Davidson TERANE | Home" />
-    <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
-    <!--For Dark/Light mode Toggle-->
+  <title>Davidson TERANE | Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
+  <!-- SEO Meta Tags -->
+  <meta name="keywords" content="Davidson TERANE, freelancer, digital creator, portfolio, creative professional, web developer, global marketplace">
+  <meta name="description" content="Hi, I am a Freelancer"> 
+
+  <!-- Search Bots -->
+  <meta name="robots" content="index,follow" />
+  <meta name="Googlebot" content="index,follow" />
+  <meta name="AdsBot-Google" content="index,follow" /> 
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:site_name" content="https://davidsonterane.com">
+  <meta property="og:title" content="Davidson TERANE | Portfolio">
+  <meta property="og:description" content="I don’t have a boss; I’m a freelancer — I sell my skills and passion in the global marketplace!">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://davidsonterane.com"> 
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="https://davidsonterane.com"> 
+
+  <!-- Application Name -->
+  <meta name="application-name" content="Davidson TERANE | Portfolio">
+  <meta name="apple-mobile-web-app-title" content="Davidson TERANE | Portfolio"> 
+
+  <!-- Summary (Optional) -->
+  <meta name="summary" content="I don’t have a boss; I’m a freelancer — I sell my skills and passion in the global marketplace!">
+<!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <!--Import Google Icon Font-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
