--- a/index.html
+++ b/index.html
@@ -209,6 +209,23 @@
     </center>
 
     <br><br><br>
+    <div class="social-icons">
+  <a class="socialicon twitter" href="https://x.com/TeraneDavidsonReal" target="_blank" rel="author">
+    <i class="fab fa-twitter"></i>
+  </a>
+  <a class="socialicon dribbble" href="https://dribbble.com/TeraneDavidson" target="_blank" rel="author">
+    <i class="fab fa-dribbble"></i>
+  </a>
+  <a class="socialicon linkedin" href="https://www.linkedin.com/in/davidson-terane-260603372" target="_blank" rel="author">
+    <i class="fab fa-linkedin"></i>
+  </a>
+  <a class="socialicon instagram" href="https://www.instagram.com/teranedavidson" target="_blank" rel="author">
+    <i class="fab fa-instagram"></i>
+  </a>
+  <a class="socialicon github" href="https://github.com/Dterane" target="_blank" rel="author">
+    <i class="fab fa-github"></i>
+  </a>
+    </div>
     <!-- Dynamic footer section -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
