--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
                             <i class="fab fa-kaggle"></i>
                         </a>
 
+                        <a class="socialicon facebook" href="https://www.facebook.com/TeraneDavidson" target="_blank" rel="author">
+    <svg class="facebook-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#1877F2" d="M24 12.073c0-6.627-5.373-12-12-12S0 5.446 0 12.073c0 5.989 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.412c0-3.007 1.793-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.85c-1.491 0-1.953.925-1.953 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+    </svg>
+                        </a>
+
                         <a class="socialicon instagram" href="https://www.instagram.com/teranedavidson?igsh=dDhxcXNub3BhMXFm" target="_blank" rel="author">
                             <!-- svg code for instagram icon -->
                             <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
