--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
                             </svg>
                         </a>
 
+                        <a class="socialicon whatsapp" href="https://wa.me/qr/VIMRRJNAAP4AI1" target="_blank" rel="author">
+    <svg class="whatsapp-icon" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#25D366" d="M380.9 97.1C339-15.2 207.3-26.7 128.3 53.5c-61.1 61.3-72.1 153.6-29.3 226.2L48 464l187.6-50.1c70.7 38.1 161.8 26.5 222.7-34.7 79.3-79.3 79.3-208.2 0-287.5zm-54.1 232c-6.6 18.7-38.7 35.5-55.3 37.5-13.9 1.6-31.6 2.3-91.6-24.7-76.9-32.9-128.2-113.5-132.1-118.8s-31.6-42-31.6-80.1c0-38.2 24-57.1 32.7-64.8 9.8-8.8 23.6-13.1 37.3-13.1 3.1 0 5.9.2 8.4.4 7.4.6 11.2.8 16.2 1.7 5.1.9 11.6.3 17.5 13.6 6.7 14.6 21.3 50.7 23.2 54.3s2.8 7.6 0.6 12.2-11.5 25.4-15.8 34.1c-2.6 5.3-5.3 11.1-2.3 16.3s12.2 20.1 26.2 32.6c18 16.2 31.5 21.3 36.7 23.7 5.2 2.3 8.2 1.9 11.2-1.2s12.9-15 16.3-20.2c3.4-5.2 6.8-4.3 11.5-2.6s30.1 14.2 35.3 16.8c5.1 2.6 8.6 3.9 9.9 6.1 1.3 2.3 1.3 13.4-5.3 32.1z"/>
+    </svg>
+                        </a>
+
                         <a class="socialicon codeforces" href="https://codeforces.com/register/afterRegistration?handle=teranedavidson" target="_blank" rel="author">
                             <svg class="codeforces-icon" xmlns="http://www.w3.org/2000/svg" viewBox="5 0 14 19" width="100" height="100">
                                 <g>
