--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
                             <i class="fab fa-kaggle"></i>
                         </a>
 
-                        <a class="socialicon facebook" href="https://www.facebook.com/TeraneDavidson" target="_blank" rel="author">
-    <svg class="facebook-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#1877F2" d="M24 12.073c0-6.627-5.373-12-12-12S0 5.446 0 12.073c0 5.989 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.412c0-3.007 1.793-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.85c-1.491 0-1.953.925-1.953 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                        <a class="socialicon mail" href="mailto:davidsonterane@hotmail.com" target="_blank" rel="author">
+    <svg class="mail-icon" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#D44638" d="M502.3 190.8L327.4 338.2 502.3 460c9.3-14.3 9.7-30.3 9.7-46.4V236.3c0-15.7-.4-31.2-9.7-45.5zM288 352.9l-64-49.2-64 49.2L32 210.2V432c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V210.2L288 352.9zM480 80H32C14.3 80 0 94.3 0 112v16.5l256 196.7 256-196.6V112c0-17.7-14.3-32-32-32z"/>
     </svg>
                         </a>
 
