--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
                             <i class="fab fa-kaggle"></i>
                         </a>
 
+                        <a class="socialicon youtube" href="https://www.youtube.com/@TeraneDavidson" target="_blank" rel="author">
+    <svg class="youtube-icon" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#FF0000" d="M549.7 124.1c-6.3-23.8-24.9-42.5-48.6-48.9C456.7 64 288 64 288 64s-168.7 0-213.1 11.2c-23.8 6.4-42.4 25.1-48.7 48.9C16 168.6 16 256 16 256s0 87.4 10.2 131.9c6.3 23.8 24.9 42.5 48.7 48.9C119.3 448 288 448 288 448s168.7 0 213.1-11.2c23.8-6.4 42.4-25.1 48.6-48.9C560 343.4 560 256 560 256s0-87.4-10.3-131.9zM232 336V176l142 80-142 80z"/>
+    </svg>
+                        </a>
+
                         <a class="socialicon mail" href="mailto:davidsonterane@hotmail.com" target="_blank" rel="author">
     <svg class="mail-icon" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
         <path fill="#D44638" d="M502.3 190.8L327.4 338.2 502.3 460c9.3-14.3 9.7-30.3 9.7-46.4V236.3c0-15.7-.4-31.2-9.7-45.5zM288 352.9l-64-49.2-64 49.2L32 210.2V432c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V210.2L288 352.9zM480 80H32C14.3 80 0 94.3 0 112v16.5l256 196.7 256-196.6V112c0-17.7-14.3-32-32-32z"/>
